Fixed design bug on mobile on modals

--- a/src/app/components/modal/modal.component.scss
+++ b/src/app/components/modal/modal.component.scss
@@ -106,6 +106,7 @@ $MODERATION-PADDING-MOBILE: units(2);
 
   @include sm {
     padding-right: units(1);
+    width: calc(100% + 2 * #{$MODERATION-PADDING-MOBILE});
   }
 }
 
